logs/validate.20260408-041933.log
Mode: isolate
Isolate: including Chap62 Chap19 Chap06 Chap05 Chap02
error: unexpected token, expected `;`
   --> src/Chap62/StarContractionMtEph.rs:278:66
    |
278 |                 graph@.V.contains((*edges_arc).spec_index(j)@.1) by {
    |                                                                  ^^

error[E0425]: cannot find type `StarContractionMtEph` in this scope
   --> src/Chap62/StarContractionMtEph.rs:473:30
    |
473 |     impl std::fmt::Debug for StarContractionMtEph {
    |                              ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `StarContractionMtEph` in this scope
   --> src/Chap62/StarContractionMtEph.rs:479:32
    |
479 |     impl std::fmt::Display for StarContractionMtEph {
    |                                ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 3s
Sampled Memory Usage: peak rust_verify RSS: 2656MB, peak z3 RSS: 406MB, min free: 23775MB
Sampled CPU Usage: rust_verify: 35s, z3 children: 22s
